tests/feature_tests/snapshots/e2e__feature_tests__use_alias_install_if_missing__Fish.snap
---
source: tests/feature_tests/mod.rs
expression: "&source.trim()"
---
fnm env | source
echo 'lts/*' > .node-version
fnm use --install-if-missing
fnm ls | grep lts-latest
