tests/feature_tests/snapshots/e2e__feature_tests__use_alias_install_if_missing__Zsh.snap
---
source: tests/feature_tests/mod.rs
expression: "&source.trim()"
---
set -e
eval "$(fnm env)"
echo 'lts/*' > .node-version
fnm use --install-if-missing
fnm ls | grep lts-latest
